--- a/public/css/web.css
+++ b/public/css/web.css
@@ -2,13 +2,25 @@ body {
     background-color: whitesmoke;
 }
 
-.box {
-    position: relative;
+.box-1 {
     background: linear-gradient(#1cb5e0, transparent);
-    top: 20px;
-    bottom: ;
-   }
+    position: relative;
+    bottom:1px;
+    margin-left: 1px;
+    border-top-right-radius: 5px;
+}
+.box-2 {
+    background: linear-gradient(#1cb5e0, transparent);
+    position: relative;
+    bottom:1px;
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
+}
+
+.space {
+    padding: 10px;
+}
 
 .on {
-    background-color: whitesmoke !important;
+    background-color: #1cb5e0 !important;
 }
