--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,19 +1,14 @@
 .login{
-    margin-top: 30%;
+    margin:auto;
+    margin-top: 17% !important;
+    width: 50%;
+    height: auto;
+    border-radius: 15px;
 }
-.login-side-2{
-    margin-top: 3%;
-    margin-right: 3%;
-    margin-bottom: 3%;
-}
-.login-side-2 h6{
+.login h6{
     text-align:center;
-    margin-bottom: 5%;
 }
-.gambar-1-login{
-    height: 100%;
-}
-.gambar-2-login{
+.gambar-login{
     display: block;
     margin: auto;
 }
