--- a/public/css/web.css
+++ b/public/css/web.css
@@ -23,7 +23,7 @@ body {
 }
 
 .on {
-    background-color: #a07558 !important;
+    background-color: #ff7f00 !important;
     border-top-right-radius: 15px !important;
     border-top-left-radius: 15px !important;
     color: black;
