--- a/public/css/web.css
+++ b/public/css/web.css
@@ -3,19 +3,23 @@ body {
 }
 
 .box-1 {
-    background: linear-gradient(#ff7f00, transparent);
+    /* background: linear-gradient(white, transparent); */
+    background-color: white !important;
     position: relative;
     bottom:1px;
     border-top-right-radius: 15px !important;
+    border-bottom-right-radius: 15px !important;
+    border-bottom-left-radius: 15px !important;
 }
 .box-2 {
-    background: linear-gradient(#ff7f00, transparent);
+    /* background: linear-gradient(white, transparent); */
+    background-color: white !important;
     position: relative;
     bottom:1px;
     border-top-right-radius: 15px !important;
     border-top-left-radius: 15px !important;
-    border-bottom-right-radius: none !important;
-    border-bottom-left-radius: none !important;
+    border-bottom-right-radius: 15px !important;
+    border-bottom-left-radius: 15px !important;
 }
 
 .space {
@@ -23,7 +27,7 @@ body {
 }
 
 .on {
-    background-color: #ff7f00 !important;
+    background-color: white !important;
     border-top-right-radius: 15px !important;
     border-top-left-radius: 15px !important;
     color: black;
