--- a/public/css/web.css
+++ b/public/css/web.css
@@ -51,3 +51,12 @@ body {
     border-bottom-right-radius: 15px !important;
     border-bottom-left-radius: 15px !important;
 }
+
+.btn-primary {
+    background-color: #964b00;
+    border-color: #964b00;
+}
+.btn-primary:hover {
+    background-color: #2f210d ;
+    border-color: #2f210d ;
+}
