--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2149,9 +2149,11 @@ pre code {
 .form-control:focus {
   color: #495057;
   background-color: #fff;
-  border-color: #a1cbef;
+  /* border-color: #a1cbef; */
+  border-color: #a07558;
   outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(52, 144, 220, 0.25);
+  /* box-shadow: 0 0 0 0.2rem rgba(52, 144, 220, 0.25); */
+  box-shadow: 0 0 0 0.2rem rgba(220, 133, 52, 0.25);
 }
 
 .form-control::-moz-placeholder {
@@ -2681,39 +2683,47 @@ fieldset:disabled a.btn {
   border-color: #3490dc;
 }
 
-.btn-primary:hover {
+/* .btn-primary:hover {
   color: #fff;
   background-color: #227dc7;
   border-color: #2176bd;
-}
+} */
 
 .btn-primary:focus,
 .btn-primary.focus {
   color: #fff;
-  background-color: #227dc7;
-  border-color: #2176bd;
-  box-shadow: 0 0 0 0.2rem rgba(82, 161, 225, 0.5);
+  /* background-color: #227dc7; */
+  background-color: #2f210d;
+  /* border-color: #2176bd; */
+  border-color: #2f210d;
+  /* box-shadow: 0 0 0 0.2rem rgba(82, 161, 225, 0.5); */
+  box-shadow: 0 0 0 0.2rem #a07558;
 }
 
 .btn-primary.disabled,
 .btn-primary:disabled {
   color: #fff;
-  background-color: #3490dc;
-  border-color: #3490dc;
+  /* background-color: #3490dc;
+  border-color: #3490dc; */
+  background-color: #2f210d;
+  border-color: #2f210d;
 }
 
 .btn-primary:not(:disabled):not(.disabled):active,
 .btn-primary:not(:disabled):not(.disabled).active,
 .show > .btn-primary.dropdown-toggle {
   color: #fff;
-  background-color: #2176bd;
-  border-color: #1f6fb2;
+  /* background-color: #2176bd; */
+  background-color: #2f210d;
+  /* border-color: #1f6fb2; */
+  border-color: #2f210d;
 }
 
 .btn-primary:not(:disabled):not(.disabled):active:focus,
 .btn-primary:not(:disabled):not(.disabled).active:focus,
 .show > .btn-primary.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.2rem rgba(82, 161, 225, 0.5);
+  /* box-shadow: 0 0 0 0.2rem rgba(82, 161, 225, 0.5); */
+  box-shadow: 0 0 0 0.2rem #a07558;
 }
 
 .btn-secondary {
@@ -3604,7 +3614,8 @@ input[type=button].btn-block {
 .dropdown-item:active {
   color: #fff;
   text-decoration: none;
-  background-color: #3490dc;
+  /* background-color: #3490dc; */
+  background-color: #2f210d;
 }
 
 .dropdown-item.disabled,
