--- a/public/css/web.css
+++ b/public/css/web.css
@@ -61,3 +61,13 @@ body {
     background-color: #2f210d ;
     border-color: #2f210d ;
 }
+
+.nav-span {
+    color: #fff;
+}
+.nav-span:hover {
+    color: #fff;
+}
+.nav-shadow {
+    box-shadow: 0 2px 10px #000;
+}
